Complete HTML sheet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <!--navigation bar section -->  
   <nav>
     <div>Header Logo</div>
     <ul>
@@ -14,6 +15,57 @@
         <li>header link three</li>
     </ul>
   </nav>
+
+  <!--Header of the websit-->  
+  <div>
+    <div>    
+      <div>
+        <h1>This website is awesome</h1>
+      </div>
+      <div>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
+      </div>
+      <div>
+        <button>Sign up</button>
+      </div>
+    </div>
+    
+    <div>This is a place holder for an image</div>
+  </div>
+
+  <!--Section with four windows of subtext-->
+  <div><h1>Some random information.</h1></div>
+
+  <div>
+    <div>empty box for now</div>
+    <div>this is some subtext under an illustration or image</div>
+  </div>
+  <div>
+    <div>empty box for now</div>
+    <div>this is some subtext under an illustration or image</div>
+  </div>
+  <div>
+    <div>empty box for now</div>
+    <div>this is some subtext under an illustration or image</div>
+  </div>
+  <div>
+    <div>empty box for now</div>
+    <div>this is some subtext under an illustration or image</div>
+  </div>
+
+  <!--Inspiring quote section-->
+  <div><em>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</em></div>
+  <div><strong>-Thor, God of Thunder</strong></div>
+
+  <!--Seems to be some sort of ad section-->
+  <div>
+    <div>Call to action! It's time!</div>
+    <div>Sign up for our product by clicking that button right over there</div>  
+    <div><button>Sign up</button></div>
+  </div>
+
+  <!--Footer-->
+  <div>Copyright &copy; The Odin Project 2023 </div>
 
 
 
