--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf8">
   <title>Odin Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <!--navigation bar section -->  
   <nav>
-    <div>Header Logo</div>
+    <div class="header_logo">Header Logo</div>
     <ul>
         <li>header link one</li>
         <li>header link two</li>
@@ -17,8 +18,8 @@
   </nav>
 
   <!--Header of the websit-->  
-  <div>
-    <div>    
+  <div class="header">
+    <div class="left_header">    
       <div>
         <h1>This website is awesome</h1>
       </div>
@@ -29,43 +30,46 @@
         <button>Sign up</button>
       </div>
     </div>
-    
-    <div>This is a place holder for an image</div>
+    <div class="right_header">This is a place holder for an image</div>
   </div>
 
   <!--Section with four windows of subtext-->
-  <div><h1>Some random information.</h1></div>
+  <div class="subtext">
+    <div><h1>Some random information.</h1></div>
 
-  <div>
-    <div>empty box for now</div>
-    <div>this is some subtext under an illustration or image</div>
-  </div>
-  <div>
-    <div>empty box for now</div>
-    <div>this is some subtext under an illustration or image</div>
-  </div>
-  <div>
-    <div>empty box for now</div>
-    <div>this is some subtext under an illustration or image</div>
-  </div>
-  <div>
-    <div>empty box for now</div>
-    <div>this is some subtext under an illustration or image</div>
+    <div>
+      <div>empty box for now</div>
+      <div>this is some subtext under an illustration or image</div>
+    </div>
+    <div>
+      <div>empty box for now</div>
+      <div>this is some subtext under an illustration or image</div>
+    </div>
+    <div>
+      <div>empty box for now</div>
+      <div>this is some subtext under an illustration or image</div>
+    </div>
+    <div>
+      <div>empty box for now</div>
+      <div>this is some subtext under an illustration or image</div>
+    </div>
   </div>
 
   <!--Inspiring quote section-->
-  <div><em>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</em></div>
-  <div><strong>-Thor, God of Thunder</strong></div>
+  <div class="quote">
+    <div><em>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</em></div>
+    <div><strong>-Thor, God of Thunder</strong></div>
+  </div>  
 
   <!--Seems to be some sort of ad section-->
-  <div>
+  <div class="advert">
     <div>Call to action! It's time!</div>
     <div>Sign up for our product by clicking that button right over there</div>  
     <div><button>Sign up</button></div>
   </div>
 
   <!--Footer-->
-  <div>Copyright &copy; The Odin Project 2023 </div>
+  <div class="footer">Copyright &copy; The Odin Project 2023 </div>
 
 
 
