--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
   <!--Section with four windows of subtext-->
   <div class="subtext">
     <div><h1>Some random information.</h1></div>
-
-    <div>
-      <div>empty box for now</div>
-      <div>this is some subtext under an illustration or image</div>
-    </div>
-    <div>
-      <div>empty box for now</div>
-      <div>this is some subtext under an illustration or image</div>
-    </div>
-    <div>
-      <div>empty box for now</div>
-      <div>this is some subtext under an illustration or image</div>
-    </div>
-    <div>
-      <div>empty box for now</div>
-      <div>this is some subtext under an illustration or image</div>
-    </div>
+    
+    <div class="image_windows">  
+      <div>
+        <div class="box"></div>
+        <div class="box_text">this is some subtext under an illustration or image</div>
+      </div>
+      <div>
+        <div class="box"></div>
+        <div class="box_text">this is some subtext under an illustration or image</div>
+      </div>
+      <div>
+        <div class="box"></div>
+        <div class="box_text">this is some subtext under an illustration or image</div>
+      </div>
+      <div>
+        <div class="box"></div>
+        <div class="box_text">this is some subtext under an illustration or image</div>
+      </div>
+    </div>  
   </div>
 
   <!--Inspiring quote section-->
