--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!--Inspiring quote section-->
   <div class="quote">
     <div><em>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</em></div>
-    <div><strong>-Thor, God of Thunder</strong></div>
+    <div class="quote_reference"><strong>-Thor, God of Thunder</strong></div>
   </div>  
 
   <!--Seems to be some sort of ad section-->
