--- a/index.html
+++ b/index.html
@@ -64,11 +64,17 @@
   </div>  
 
   <!--Seems to be some sort of ad section-->
-  <div class="advert">
-    <div>Call to action! It's time!</div>
-    <div>Sign up for our product by clicking that button right over there</div>  
-    <div><button>Sign up</button></div>
-  </div>
+  <div class="advert">  
+    <div class="blue_box">
+      <div class="bluebox_content">
+        <div class="bluebox_text">  
+          <div class="call">Call to action! It's time!</div>
+          <div class="sign_up">Sign up for our product by clicking that button right over there</div>
+        </div>    
+        <div><button>Sign up</button></div>
+      </div>
+    </div>
+  </div>        
 
   <!--Footer-->
   <div class="footer">Copyright &copy; The Odin Project 2023 </div>
