Added images. Not complete

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <nav>
     <div class="header_logo">Header Logo</div>
     <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+        <li>Shop</li>
+        <li>Contact</li>
+        <li><button><a href="https://www.youtube.com/watch?v=V-mZc9hvfaY">Your first guitar lesson!</a></button> </li>
     </ul>
   </nav>
 
@@ -21,16 +21,16 @@
   <div class="header">
     <div class="left_header">    
       <div>
-        <h1>This website is awesome</h1>
+        <h1>The best fake guitar shop website you'll ever see</h1>
       </div>
       <div>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
+        <p>This website was created through immense trial and error to bring you a website that offers to sell you guitars that dont exist. Enjoy! </p>
       </div>
       <div>
         <button>Sign up</button>
       </div>
     </div>
-    <div class="right_header">This is a place holder for an image</div>
+    <div class="right_header"><img class="header_acoustic" alt="acoustic guitar" src="./images/header_guitar.jpg"></div>
   </div>
 
   <!--Section with four windows of subtext-->
@@ -39,12 +39,12 @@
     
     <div class="image_windows">  
       <div>
-        <div class="box"></div>
-        <div class="box_text">this is some subtext under an illustration or image</div>
+        <div class="box"><img alt="acoustic guitar product" src="./images/product_1.jpeg" class="product"></div>
+        <div class="box_text">I dont have one of these to sell to you, but when you do get one, please get past just learning Wonderwall. </div>
       </div>
       <div>
-        <div class="box"></div>
-        <div class="box_text">this is some subtext under an illustration or image</div>
+        <div class="box"><img alt="Probably a fake fender" src="./images/product_2.jpeg" class="product"></div>
+        <div class="box_text">This is the classic fender strat or probably just a knockoff, since its a random image off the internet</div>
       </div>
       <div>
         <div class="box"></div>
