Final addition of images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="header">
     <div class="left_header">    
       <div>
-        <h1>The best fake guitar shop website you'll ever see</h1>
+        <h1>The best fake online guitar store you'll ever see</h1>
       </div>
       <div>
         <p>This website was created through immense trial and error to bring you a website that offers to sell you guitars that dont exist. Enjoy! </p>
@@ -40,19 +40,19 @@
     <div class="image_windows">  
       <div>
         <div class="box"><img alt="acoustic guitar product" src="./images/product_1.jpeg" class="product"></div>
-        <div class="box_text">I dont have one of these to sell to you, but when you do get one, please get past just learning Wonderwall. </div>
+        <div class="box_text"> Perfect for campfires, or gathering dust while you procrastinate learning to play </div>
       </div>
       <div>
         <div class="box"><img alt="Probably a fake fender" src="./images/product_2.jpeg" class="product"></div>
         <div class="box_text">This is the classic fender strat or probably just a knockoff, since its a random image off the internet</div>
       </div>
       <div>
-        <div class="box"></div>
-        <div class="box_text">this is some subtext under an illustration or image</div>
+        <div class="box"><img alt="les paul guitar" src="./images/product_3.jpeg" class="product"></div>
+        <div class="box_text">The famous Les Paul...I'm running out of clever things to say</div>
       </div>
       <div>
-        <div class="box"></div>
-        <div class="box_text">this is some subtext under an illustration or image</div>
+        <div class="box"><img alt="A weirdly shaped guitar" src="./images/product_4.jpeg" class="product"></div>
+        <div class="box_text">Words...bla bla bla...guitar...bla bla bla</div>
       </div>
     </div>  
   </div>
